--- a/style.css
+++ b/style.css
@@ -107,4 +107,10 @@ button {
     h1{
         font-size: 2rem;
     }
+
+    .image-container{
+        width: 50px;
+        height: 50px;
+        padding-right: 20px;
+    }
 }
